nix-compat-derive-tests/tests/ui/parse_bad_default.stderr
error: expected nix attribute default to be string
 --> tests/ui/parse_bad_default.rs:5:21
  |
5 |     #[nix(default = 12)]
  |                     ^^
